<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#48DA9B"
    android:orientation="vertical"
    android:gravity="center"
    tools:context=".Doctor_Log_In">

    <TextView
        android:layout_width="248dp"
        android:layout_height="51dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="71dp"
        android:layout_marginTop="156dp"
        android:layout_marginEnd="74dp"
        android:layout_marginBottom="528dp"
        android:text="DOCTOR LOG IN"
        android:textSize="30sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/texviewdoctorLogInID"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="0dp"
        android:layout_marginTop="215dp"
        android:layout_marginBottom="486dp"
        android:text="Choose your Hospital"
        android:textSize="25sp"
        android:textStyle="bold" />

    <Spinner
        android:id="@+id/spinnedoctorLogInID"
        android:layout_width="match_parent"
        android:layout_height="66dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="0dp"
        android:layout_marginTop="258dp"
        android:layout_marginEnd="4dp"
        android:layout_marginBottom="414dp" />


    <EditText
        android:id="@+id/doctorLogInidID"
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="144dp"
        android:layout_marginTop="343dp"
        android:layout_marginEnd="112dp"
        android:layout_marginBottom="344dp"
        android:hint="Doctor ID" />

    <EditText
        android:id="@+id/doctorLogInPasswordID"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="140dp"
        android:layout_marginTop="410dp"
        android:layout_marginEnd="105dp"
        android:layout_marginBottom="282dp"
        android:hint="Doctor Password" />

    <Button
        android:id="@+id/doctorLogInButtonID"
        android:layout_width="140dp"
        android:layout_height="76dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="146dp"
        android:layout_marginTop="471dp"
        android:layout_marginEnd="125dp"
        android:layout_marginBottom="226dp"
        android:text="LOG IN"
        android:textStyle="bold" />

    <Button
        android:id="@+id/DoctorRegisterFromLogINID"
        android:layout_width="381dp"
        android:layout_height="40dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="8dp"
        android:layout_marginTop="551dp"
        android:layout_marginEnd="4dp"
        android:layout_marginBottom="144dp"
        android:text="DOCTOR REGISTRATION ?"
        android:textStyle="bold" />

</RelativeLayout>